--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_API_URL = https://projeto-restaurante-backend.onrender.com
+NEXT_PUBLIC_API_URL=https://projeto-restaurante-backend.onrender.com
